Remove unneeded files for v4

--- a/v4/views/index.hbs
+++ b/v4/views/index.hbs
@@ -1,5 +1,24 @@
-<h1>Styled with bootstrap</h1>
+<div class="container">
+    <h1>Static Product Grid</h1>
 
-<a href="/products1" class="btn btn-primary">Products 1</a>
-<a href="/products2" class="btn btn-primary">Products 2</a>
-<a href="/products3" class="btn btn-primary">Products 3</a>
+    <div class="row product-grid"></div>
+</div>
+
+{{#section 'scripts'}}
+<script>
+    const products = {{{ products }}}
+
+    let productGrid = $('.product-grid')
+
+    for (let product of products) {
+        let productItem = `
+            <div class="col-md-3">
+                <p>${product.name}</p>
+                <p>$${product.price}</p>
+            </div>
+        `
+
+        productGrid.append(productItem)
+    }
+</script>
+{{/section}}
