Fix some links in v6

--- a/v6/views/addProduct.hbs
+++ b/v6/views/addProduct.hbs
@@ -1,6 +1,6 @@
 <div class="container">
     <h4>Add Product</h4>
-    <form action="addProduct" method="post">
+    <form action="/addProduct" method="post">
         <div class="form-field">
             <label>Name</label>
             <input name="name" type="text" class="form-control" placeholder="Name">
