--- a/v6/views/index.hbs
+++ b/v6/views/index.hbs
@@ -1,6 +1,6 @@
 <div class="container">
     <h1>Static Product Grid</h1>
-    <a href="/AddProduct" class="btn btn-primary">Add Product</a>
+    <a href="/addProduct" class="btn btn-primary">Add Product</a>
     <div class="row product-grid"></div>
 </div>
 
