Fix index heading

--- a/v6/views/index.hbs
+++ b/v6/views/index.hbs
@@ -1,5 +1,5 @@
 <div class="container">
-    <h1>Static Product Grid</h1>
+    <h1>Simple E-Commerce</h1>
     <a href="/addProduct" class="btn btn-primary">Add Product</a>
     <div class="row product-grid"></div>
 </div>
