--- a/v4/views/index.hbs
+++ b/v4/views/index.hbs
@@ -1,5 +1,5 @@
 <div class="container">
-    <h1>Static Product Grid</h1>
+    <h1>Simple E-Commerce</h1>
 
     <div class="row product-grid"></div>
 </div>
